force-app/main/default/objects/CollectContactPaymentRequest__c/CollectContactPaymentRequest__c.object-meta.xml
<CustomObject>
    <label>回収連絡支払依頼</label>
    <nameField>
        <displayFormat>CCPR-{000000000}</displayFormat>
        <label>回収連絡支払依頼名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>