force-app/main/default/objects/CollectContactPaymentRequest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>回収連絡支払依頼</relationshipLabel>
    <relationshipName>CollectContactPaymentRequest_Account</relationshipName>
    <type>Lookup</type>
</CustomField>