force-app/main/default/objects/CollectContactPaymentRequest__c/fields/ActualAmount1__c.field-meta.xml
<CustomField>
    <fullName>ActualAmount1__c</fullName>
    <label>①実質金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>