force-app/main/default/objects/CollectContactPaymentRequest__c/fields/ActualAmount2__c.field-meta.xml
<CustomField>
    <fullName>ActualAmount2__c</fullName>
    <label>②実質金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>