force-app/main/default/objects/CollectContactPaymentRequest__c/fields/ActualAmount3__c.field-meta.xml
<CustomField>
    <fullName>ActualAmount3__c</fullName>
    <label>③実質金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>