force-app/main/default/objects/CollectContactPaymentRequest__c/fields/Amount12__c.field-meta.xml
<CustomField>
    <fullName>Amount12__c</fullName>
    <label>①金額２</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>