force-app/main/default/objects/CollectContactPaymentRequest__c/fields/Amount14__c.field-meta.xml
<CustomField>
    <fullName>Amount14__c</fullName>
    <label>①金額４</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>