force-app/main/default/objects/CollectContactPaymentRequest__c/fields/Amount22__c.field-meta.xml
<CustomField>
    <fullName>Amount22__c</fullName>
    <label>②金額２</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>