force-app/main/default/objects/CollectContactPaymentRequest__c/fields/AmountTaxCategory12__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxCategory12__c</fullName>
    <label>①金額２税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>