force-app/main/default/objects/CollectContactPaymentRequest__c/fields/AmountTaxCategory21__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxCategory21__c</fullName>
    <label>②金額１税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>