force-app/main/default/objects/CollectContactPaymentRequest__c/fields/AttachedDocument2__c.field-meta.xml
<CustomField>
    <fullName>AttachedDocument2__c</fullName>
    <label>②添付書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>請求書</fullName>
            </value>
            <value>
                <fullName>敷金精算決裁申請書</fullName>
            </value>
            <value>
                <fullName>作業手配書</fullName>
            </value>
            <value>
                <fullName>概算見積書</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>