force-app/main/default/objects/CollectContactPaymentRequest__c/fields/AttachedDocumentMemo1__c.field-meta.xml
<CustomField>
    <fullName>AttachedDocumentMemo1__c</fullName>
    <label>①添付書類_メモ</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>