force-app/main/default/objects/CollectContactPaymentRequest__c/fields/AttachedDocumentMemo2__c.field-meta.xml
<CustomField>
    <fullName>AttachedDocumentMemo2__c</fullName>
    <label>②添付書類_メモ</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>