force-app/main/default/objects/CollectContactPaymentRequest__c/fields/AttachedDocumentMemo3__c.field-meta.xml
<CustomField>
    <fullName>AttachedDocumentMemo3__c</fullName>
    <label>③添付書類_メモ</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>