force-app/main/default/objects/CollectContactPaymentRequest__c/fields/Check1__c.field-meta.xml
<CustomField>
    <fullName>Check1__c</fullName>
    <label>1次チェック</label>
    <type>Date</type>
</CustomField>