force-app/main/default/objects/CollectContactPaymentRequest__c/fields/CollectAfterProcessMethod3__c.field-meta.xml
<CustomField>
    <fullName>CollectAfterProcessMethod3__c</fullName>
    <label>③回収後の処理方法</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>次回「契約金」と相殺</fullName>
            </value>
            <value>
                <fullName>次回「賃料」と相殺</fullName>
            </value>
            <value>
                <fullName>個別返金</fullName>
            </value>
            <value>
                <fullName>回収のみ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>