force-app/main/default/objects/CollectContactPaymentRequest__c/fields/CollectAfterProcessMethodMemo1__c.field-meta.xml
<CustomField>
    <fullName>CollectAfterProcessMethodMemo1__c</fullName>
    <label>①回収後の処理方法_メモ</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>