force-app/main/default/objects/CollectContactPaymentRequest__c/fields/CollectAfterProcessMethodMemo2__c.field-meta.xml
<CustomField>
    <fullName>CollectAfterProcessMethodMemo2__c</fullName>
    <label>②回収後の処理方法_メモ</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>