force-app/main/default/objects/CollectContactPaymentRequest__c/fields/CollectBankAccount2__c.field-meta.xml
<CustomField>
    <fullName>CollectBankAccount2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>②回収口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>回収連絡支払依頼 (②回収口座)</relationshipLabel>
    <relationshipName>CollectContactPaymentRequest_CollectBank</relationshipName>
    <type>Lookup</type>
</CustomField>