force-app/main/default/objects/CollectContactPaymentRequest__c/fields/CollectDestination1__c.field-meta.xml
<CustomField>
    <fullName>CollectDestination1__c</fullName>
    <label>①回収先</label>
    <type>TextArea</type>
</CustomField>