force-app/main/default/objects/CollectContactPaymentRequest__c/fields/CollectReason2__c.field-meta.xml
<CustomField>
    <fullName>CollectReason2__c</fullName>
    <label>②回収理由</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>