force-app/main/default/objects/CollectContactPaymentRequest__c/fields/CollectScheduledDate1__c.field-meta.xml
<CustomField>
    <fullName>CollectScheduledDate1__c</fullName>
    <label>①回収予定日</label>
    <type>Date</type>
</CustomField>