force-app/main/default/objects/CollectContactPaymentRequest__c/fields/CollectScheduledDate3__c.field-meta.xml
<CustomField>
    <fullName>CollectScheduledDate3__c</fullName>
    <label>③回収予定日</label>
    <type>Date</type>
</CustomField>