force-app/main/default/objects/CollectContactPaymentRequest__c/fields/DecisionApplication__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>決裁申請2</label>
    <referenceTo>DecisionApplication2__c</referenceTo>
    <relationshipLabel>回収連絡支払依頼</relationshipLabel>
    <relationshipName>CollectContactPaymentRequest_DecisionApp</relationshipName>
    <type>Lookup</type>
</CustomField>