force-app/main/default/objects/CollectContactPaymentRequest__c/fields/ExpenseItems11__c.field-meta.xml
<CustomField>
    <fullName>ExpenseItems11__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>①費目１</label>
    <referenceTo>ExpenseItem__c</referenceTo>
    <relationshipLabel>回収連絡支払依頼</relationshipLabel>
    <relationshipName>ExpenseItem_ExpenseItems11</relationshipName>
    <type>Lookup</type>
</CustomField>