force-app/main/default/objects/CollectContactPaymentRequest__c/fields/ExpenseItems14__c.field-meta.xml
<CustomField>
    <fullName>ExpenseItems14__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>①費目４</label>
    <referenceTo>ExpenseItem__c</referenceTo>
    <relationshipLabel>回収連絡支払依頼 (①費目４)</relationshipLabel>
    <relationshipName>ExpenseItem_ExpenseItems14</relationshipName>
    <type>Lookup</type>
</CustomField>