force-app/main/default/objects/CollectContactPaymentRequest__c/fields/ExpenseItems15__c.field-meta.xml
<CustomField>
    <fullName>ExpenseItems15__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>①費目５</label>
    <referenceTo>ExpenseItem__c</referenceTo>
    <relationshipLabel>回収連絡支払依頼 (①費目５)</relationshipLabel>
    <relationshipName>ExpenseItem_ExpenseItems15</relationshipName>
    <type>Lookup</type>
</CustomField>