force-app/main/default/objects/CollectContactPaymentRequest__c/fields/ExpenseItemsEndDate11__c.field-meta.xml
<CustomField>
    <fullName>ExpenseItemsEndDate11__c</fullName>
    <label>①費目１終了日</label>
    <type>Date</type>
</CustomField>