force-app/main/default/objects/CollectContactPaymentRequest__c/fields/ExpenseItemsEndDate13__c.field-meta.xml
<CustomField>
    <fullName>ExpenseItemsEndDate13__c</fullName>
    <label>①費目３終了日</label>
    <type>Date</type>
</CustomField>