force-app/main/default/objects/CollectContactPaymentRequest__c/fields/ExpenseItemsEndDate14__c.field-meta.xml
<CustomField>
    <fullName>ExpenseItemsEndDate14__c</fullName>
    <label>①費目４終了日</label>
    <type>Date</type>
</CustomField>