force-app/main/default/objects/CollectContactPaymentRequest__c/fields/ExpenseItemsStartDate11__c.field-meta.xml
<CustomField>
    <fullName>ExpenseItemsStartDate11__c</fullName>
    <label>①費目１開始日</label>
    <type>Date</type>
</CustomField>