force-app/main/default/objects/CollectContactPaymentRequest__c/fields/ExpenseItemsStartDate13__c.field-meta.xml
<CustomField>
    <fullName>ExpenseItemsStartDate13__c</fullName>
    <label>①費目３開始日</label>
    <type>Date</type>
</CustomField>