force-app/main/default/objects/CollectContactPaymentRequest__c/fields/ExpenseItemsStartDate14__c.field-meta.xml
<CustomField>
    <fullName>ExpenseItemsStartDate14__c</fullName>
    <label>①費目４開始日</label>
    <type>Date</type>
</CustomField>