force-app/main/default/objects/CollectContactPaymentRequest__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>RealEstate__r.RealEstateId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>物件ＩＤ</label>
    <type>Text</type>
</CustomField>