force-app/main/default/objects/CollectContactPaymentRequest__c/fields/OverpaymentProcess1__c.field-meta.xml
<CustomField>
    <fullName>OverpaymentProcess1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>①過入金処理</label>
    <type>Checkbox</type>
</CustomField>