force-app/main/default/objects/CollectContactPaymentRequest__c/fields/OverpaymentProcess2__c.field-meta.xml
<CustomField>
    <fullName>OverpaymentProcess2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>②過入金処理</label>
    <type>Checkbox</type>
</CustomField>