force-app/main/default/objects/CollectContactPaymentRequest__c/fields/OverpaymentProcess3__c.field-meta.xml
<CustomField>
    <fullName>OverpaymentProcess3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>③過入金処理</label>
    <type>Checkbox</type>
</CustomField>