force-app/main/default/objects/CollectContactPaymentRequest__c/fields/PaymentDate3__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate3__c</fullName>
    <label>③入金日</label>
    <type>Date</type>
</CustomField>