force-app/main/default/objects/CollectContactPaymentRequest__c/fields/PaymentRequestNote__c.field-meta.xml
<CustomField>
    <fullName>PaymentRequestNote__c</fullName>
    <label>支払依頼備考</label>
    <type>TextArea</type>
</CustomField>