force-app/main/default/objects/CollectContactPaymentRequest__c/fields/TransferAccountBankAccount1__c.field-meta.xml
<CustomField>
    <fullName>TransferAccountBankAccount1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>①振込先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>回収連絡支払依頼 (①振込先口座)</relationshipLabel>
    <relationshipName>BankAccount_TransferAccountBankAccount1</relationshipName>
    <type>Lookup</type>
</CustomField>