force-app/main/default/objects/CollectContactPaymentRequest__c/fields/TransferAccountBankAccount2__c.field-meta.xml
<CustomField>
    <fullName>TransferAccountBankAccount2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>②振込先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>回収連絡支払依頼 (②振込先口座)</relationshipLabel>
    <relationshipName>BankAccount_TransferAccountBankAccount2</relationshipName>
    <type>Lookup</type>
</CustomField>