force-app/main/default/objects/CollectContactPaymentRequest__c/fields/TransferAmount1__c.field-meta.xml
<CustomField>
    <fullName>TransferAmount1__c</fullName>
    <label>①振込金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>