force-app/main/default/objects/CollectContactPaymentRequest__c/fields/TransferAmount2__c.field-meta.xml
<CustomField>
    <fullName>TransferAmount2__c</fullName>
    <label>②振込金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>