force-app/main/default/objects/CollectContactPaymentRequest__c/fields/TransferChargesSubtraction3__c.field-meta.xml
<CustomField>
    <fullName>TransferChargesSubtraction3__c</fullName>
    <label>③振手差引</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>可</fullName>
            </value>
            <value>
                <fullName>不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>