force-app/main/default/objects/CollectContactPaymentRequest__c/fields/TransferDueDate2__c.field-meta.xml
<CustomField>
    <fullName>TransferDueDate2__c</fullName>
    <label>②振込期日</label>
    <type>Date</type>
</CustomField>