force-app/main/default/objects/CollectContactPaymentRequest__c/fields/TransferDueDate3__c.field-meta.xml
<CustomField>
    <fullName>TransferDueDate3__c</fullName>
    <label>③振込期日</label>
    <type>Date</type>
</CustomField>