force-app/main/default/objects/CollectContactPaymentRequest__c/fields/Type3__c.field-meta.xml
<CustomField>
    <fullName>Type3__c</fullName>
    <label>③種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>契約金</fullName>
            </value>
            <value>
                <fullName>賃料</fullName>
            </value>
            <value>
                <fullName>更新料</fullName>
            </value>
            <value>
                <fullName>解約</fullName>
            </value>
            <value>
                <fullName>その他立替金</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>